--- a/Contacto.HTML
+++ b/Contacto.HTML
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Resgitro de Juegos</title>
+    <title>contacto</title>
 </head>
 <body>
-   <script src="app.js"></script>
+    <h1>Correo ska.arzola@gmail.com</h1>
 </body>
 </html>
